workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__test__can_handle_add_path_parameter_command__unassignable_path_id_result.snap
---
source: workspaces/optic-engine-native/src/commands/mod.rs
expression: unassignable_path_id_result.unwrap_err()
---
Validation(
    "Command failed validation: path id must be assignable to add path parameter, \"AddPathParameter(AddPathParameter { path_id: \\\"path_1\\\", parent_path_id: \\\"path_1\\\", name: \\\"todoId\\\" })\"",
)
