workspaces/optic-engine/src/commands/snapshots/optic_engine__commands__test__can_handle_add_path_parameter_command__unexisting_parent_result.snap
---
source: workspaces/optic-engine-native/src/commands/mod.rs
expression: unexisting_parent_result.unwrap_err()
---
Validation(
    "Command failed validation: parent path component must exist to add path parameter, \"AddPathParameter(AddPathParameter { path_id: \\\"path_2\\\", parent_path_id: \\\"not-a-path\\\", name: \\\"todoId\\\" })\"",
)
